...
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:checkable="true"
            android:src="@raw/icon_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/news_item_title_text_view"
            android:contentDescription="@string/news_category_image" />

        <TextView
            android:id="@+id/news_item_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <androidx.constraintlayout.widget.Group
            android:id="@+id/news_item_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="news_item_description_text_view, news_item_category_text_view" />

        <TextView
            android:id="@+id/news_item_description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
...
